# stickbot

./: .gitignore  151b0a06-7ec2-4802-94d1-dc7a5bc30949.tmp  4e4291c0-33a2-48a3-8ed2-1a7efe14b04f.tmp  d6ee3159-bc33-4073-80cd-8390136c3df2.tmp  dub.json  dub.selections.json  meson.build
i18n/: en.json  ru.json
lib/tms_lib/: .gitignore  meson.build  split.cpp  split.hpp  tms.cpp  tms.hpp
source/: app.d  meson.build
source/kimp/: answer.d  exit.d  log.d  loop.d  stickbot.d  storage.d  tms.d
